# kaomojiserver

./: .gitignore  Build.plan  KaomojiServer.cabal  LICENSE  image-build  kaomoji.json  linux-stack
src/: Main.hs
src/Glider/NLP/Language/English/: Porter.hs  StopWords.hs
src/Kaomoji/: Docs.hs  Server.hs  Types.hs
