name:                KaomojiServer
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/simonyangme/KaomojiServer#readme
license:             BSD3
license-file:        LICENSE
author:              Simon Yang
maintainer:          lokisnake@gmail.com
copyright:           Copyright © 2015 Simon Yang
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable KaomojiServer
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , deepseq
                     , either
                     , http-types
                     , mtl
                     , random
                     , servant
                     , servant-docs
                     , servant-server
                     , text
                     , transformers
                     , wai
                     , warp
  other-modules:       Glider.NLP.Language.English.Porter
                     , Glider.NLP.Language.English.StopWords
                     , Kaomoji.Types
                     , Kaomoji.Server
                     , Kaomoji.Docs
